# rusty-fluid

./: Cargo.toml  LICENSE  README.md
.cargo/: config
src/: main.rs
